--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <title>Losowator</title>
   </head>
-  <body>
+  <body class="min-h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="flex"></div>
+    <div
+      id="root"
+      class="min-w-full min-h-screen grid grid-rows-[1fr,8fr,1fr]"
+    ></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
