--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -6,12 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <title>Losowator</title>
   </head>
-  <body class="min-h-screen">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div
-      id="root"
-      class="min-w-full min-h-screen grid grid-rows-[1fr,8fr,1fr]"
-    ></div>
+    <div id="root" class="flex min-h-screen flex-col justify-between"></div>
 
     <script src="/src/index.tsx" type="module"></script>
   </body>
